k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: innovatech
  labels:
    app.kubernetes.io/name: innovatech-logistics
    app.kubernetes.io/part-of: innovatech-logistics-platform
