k8s/api-despachos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-despachos
  namespace: innovatech
  labels:
    app.kubernetes.io/name: api-despachos
    app.kubernetes.io/part-of: innovatech-logistics-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-despachos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-despachos
        app.kubernetes.io/part-of: innovatech-logistics-platform
    spec:
      containers:
        - name: api-despachos
          image: 000000000000.dkr.ecr.us-east-1.amazonaws.com/innovatech-logistics-dev-api-despachos:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 768Mi
