k8s/api-despachos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-despachos
  namespace: innovatech
  labels:
    app.kubernetes.io/name: api-despachos
    app.kubernetes.io/part-of: innovatech-logistics-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-despachos
  ports:
    - name: http
      port: 8080
      targetPort: http
