k8s/api-ventas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-ventas
  namespace: innovatech
  labels:
    app.kubernetes.io/name: api-ventas
    app.kubernetes.io/part-of: innovatech-logistics-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-ventas
  ports:
    - name: http
      port: 8081
      targetPort: http
