k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-despachos
  namespace: innovatech
  labels:
    app.kubernetes.io/name: frontend-despachos
    app.kubernetes.io/part-of: innovatech-logistics-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend-despachos
  ports:
    - name: http
      port: 80
      targetPort: http
